# endometriosis-dx-digest

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: weekly-digest.yml
config/: config.example.yml  seed_queries.yml
docs/: GOOGLE_DOC_SETUP.md  OPERATIONS.md  SETUP.md
prompts/: classify_item.md  synthesize_digest.md  system.md
src/endodigest/: __init__.py  cli.py  config.py  models.py  state.py
src/endodigest/llm/: __init__.py  classify.py  openai_client.py  synthesize.py
src/endodigest/render/: __init__.py  email.py  google_doc.py  html.py  markdown.py
src/endodigest/sources/: clinicaltrials.py  fda_press.py  pubmed.py  web_search.py
src/endodigest/utils/: __init__.py  dates.py  logging.py  normalize.py
tests/: test_config.py  test_dedupe.py  test_render.py
